--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
+    "react-simple-typewriter": "^5.0.1",
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
